better fix for timeline header cell overflow fix

--- a/timeline/src/styles/timeline-slots.css
+++ b/timeline/src/styles/timeline-slots.css
@@ -33,7 +33,14 @@ vertical slots in both the header AND the body
   & .fc-timeline-header-row-chrono { // a row of times
     & .fc-timeline-slot-frame {
       justify-content: flex-start; // horizontal align left or right
-      overflow: hidden; // important so text doesn't bleed out and cause extra scroll
+    }
+  }
+
+  & .fc-timeline-header-row:last-child { // guaranteed NOT to have sticky elements
+    & .fc-timeline-slot-frame {
+      // so text doesn't bleed out and cause extra scroll
+      // (won't work with sticky elements)
+      overflow: hidden;
     }
   }
 
